# wideboard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  tool-tool
.github/workflows/: build-server-artifact.yml  deploy-pages.yml
.tool-tool/: tool-tool.v2.kdl
crates/board/: Cargo.toml
crates/board/src/: board.rs  board_element.rs  board_state.rs  ids.rs  lib.rs  property_value.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: DESIGN.md
docs/journal/: 2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-03-03.md
docs/plans/: 2026-02-20-board-engine-refactor.md  2026-02-20-board-engine-undo-redo-gurq.md  2026-02-20-debug-overlay.md  2026-03-03-shared-board-edit-event-sync.md
scripts/: build.sh  check-code.sh
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/.storybook/: main.ts  preview.ts  tsconfig.json
ui/src/: App.stories.tsx  App.test.tsx  App.tsx  vite-env.d.ts
ui/src/board/: BoardComponent.test.tsx  BoardComponent.tsx  elementFrame.test.ts  elementFrame.ts  imageElement.ts  linkElement.ts  noteElement.ts
ui/src/board/engine/: BoardEngine.ts  boardDeltas.ts  boardEngineTestHarness.ts  boardEngineTypes.ts  boardEvents.ts  elementRegistry.ts
ui/src/board/engine/elementTypes/: imageElementType.ts  linkElementType.ts  noteElementType.ts
